--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <h1>Entreprise de conseil</h1>
         <h2>Avez vous besoin d'un service réalisé par des professionels ?</h2>
-        <a href="https://hnecvuwo1ow.typeform.com/to/X9viH7uA" target="_blank" class="btn-purple">Contactez nous</a>
+        <a href="#contact-section" target="_blank" class="btn-purple">Contactez nous</a>
       </div>
     </div>
 
@@ -32,7 +32,9 @@
         </div>
       </div>
     </div>
+    <div id="contact-section"
       <div data-tf-widget="X9viH7uA" data-tf-opacity="100" data-tf-iframe-props="title=My typeform" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+    </div>
   </body>
 </html>
 
