--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <h1>Entreprise de conseil</h1>
         <h2>Avez vous besoin d'un service réalisé par des professionels ?</h2>
-        <a href="#contact-section" target="_blank" class="btn-purple">Contactez nous</a>
+        <a href="#contact-section" class="btn-purple">Contactez nous</a>
       </div>
     </div>
 
